Prevent address bar from hiding on mobile

--- a/app/assets/stylesheets/sephora_style_guide/app/base.scss
+++ b/app/assets/stylesheets/sephora_style_guide/app/base.scss
@@ -1,10 +1,12 @@
 html {
   height: 100%;
+  overflow: hidden; // prevent address bar from being hidden on mobile
 }
 
 body {
   margin: 0;
   height: 100%;
+  overflow-y: scroll; // prevent address bar from being hidden on mobile
 }
 
 .container-fluid {
@@ -172,7 +174,7 @@ pre {
 }
 
 .disable-scroll {
-  position: fixed;  // prevent address bar being hidden on mobile
+  overflow-y: hidden;
 }
 
 [v-cloak] {
